--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,9 @@
 {
   "name": "paper-fab-menu",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "authors": [
-    "Chang W. Doh <changwook.doh@gmail.com>"
+    "Chang W. Doh <changwook.doh@gmail.com>",
+    "Jonathan Rajavuori <jrajav@gmail.com>"
   ],
   "description": "`paper-fab-menu` creates a floating action button menu with paper elements. On mobile device, tooltip is automatically shown, otherwise it will be hidden on desktop browsers.",
   "keywords": [
@@ -13,7 +14,6 @@
   ],
   "main": "paper-fab-menu.html",
   "license": "MIT",
-  "homepage": "https://github.com/cwdoh/paper-fab-menu/",
   "ignore": [
     "**/.*",
     "node_modules",
@@ -22,12 +22,9 @@
     "tests"
   ],
   "dependencies": {
-    "core-icons": "Polymer/core-icons",
-    "core-overlay": "Polymer/core-overlay",
-    "core-tooltip": "Polymer/core-tooltip",
-    "polymer": "~0.5.2",
-    "webcomponentsjs": "~0.5.2",
-    "paper-fab": "Polymer/paper-fab#^0.5"
+    "iron-icons": "Polymer/iron-icons",
+    "iron-flex-layout": "Polymer/iron-flex-layout",
+    "iron-overlay-behavior": "Polymer/iron-overlay-behavior",
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^2.0.5"
