--- a/bower.json
+++ b/bower.json
@@ -22,11 +22,14 @@
     "tests"
   ],
   "dependencies": {
-    "iron-icons": "Polymer/iron-icons",
-    "iron-flex-layout": "Polymer/iron-flex-layout",
-    "iron-overlay-behavior": "Polymer/iron-overlay-behavior"
+    "iron-component-page": "PolymerElements/iron-component-page",
+    "iron-icons": "PolymerElements/iron-icons",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout",
+    "iron-overlay-behavior": "PolymerElements/iron-overlay-behavior",
+    "paper-fab": "PolymerElements/paper-fab",
+    "paper-tooltip": "PolymerElements/paper-tooltip"
   },
   "devDependencies": {
-    "web-component-tester": "Polymer/web-component-tester#^2.0.5"
+    "web-component-tester": "*"
   }
 }
